# c_cpp_primer

./: README.md
lectures/01/hands-on/01/: README.md  main.cpp
lectures/01/hands-on/02/: README.md  meson.build
lectures/01/hands-on/solution/01/: Makefile  sol.txt
lectures/01/hands-on/solution/02/: meson.build
lectures/02/hands-on/01/: README.md  main.cpp
lectures/02/hands-on/02/: README.md  main.cpp
lectures/02/hands-on/solution/01/: main.cpp
lectures/02/hands-on/solution/02/: main.cpp
lectures/02/sandbox/void_arithmetic/: Makefile  void.cpp
lectures/03/hands-on/01/: README.md  cpp_reference.cpp  precedence.cpp  ternary.cpp
lectures/03/hands-on/solution/01/: README.md  cpp_reference.cpp  precedence.cpp  ternary.cpp
lectures/04/hands-on/01/: README.md  dfdx.cpp
lectures/04/hands-on/solution/01/: Makefile  dfdx.cpp
lectures/05/hands-on/01/: Ghost.h  main.cpp
lectures/05/hands-on/solution/01/: Ghost.h  README.md
lectures/06/hands-on/: .gitignore
lectures/06/hands-on/01/: README.md  copy_assignment_bug.cpp
lectures/06/hands-on/solution/01/: Makefile  copy_assignment_bug.cpp
lectures/07/hands-on/01/: main.cpp
lectures/07/hands-on/solution/01/: README.md  main.cpp
lectures/08/hands-on/01/: __init__.py  __main__.py  _pure_python.py  pyproject.toml
lectures/08/hands-on/01/src/: bindings.cpp  sum.cpp  sum.h
lectures/08/hands-on/solution/01/: README.md  meson.build
lectures/08/hands-on/solution/01/src/: bindings.cpp  sum.cpp  sum.h
lectures/08/pybind11/add/: meson.build  pyproject.toml
lectures/08/pybind11/add/src/: Makefile  add.cpp
lectures/09/hands-on/01/: README.md  Vector.h  main.cpp
lectures/09/hands-on/solution/01/: Vector.h
lectures/10/hands-on/01/: main.cpp
lectures/10/hands-on/solution/01/: README.md  main.cpp
