project('My_Project', ['cpp'], # project name and a list programming languages
  version: '1.0.0',            # the current version of your code
  license: 'MIT',              # optional: the license of your code
  # more options: https://mesonbuild.com/Reference-manual.html#project
)

main = executable('main', # the name of your executable
  files(['main.cpp']),    # a list of source files needed to build it
)
